--- a/css/main.css
+++ b/css/main.css
@@ -260,6 +260,7 @@ ul.operateur, li.monome, .signe {
   list-style-type : none; 
   cursor: pointer;
   text-align : center;
+   min-height: 30px;
   /*align-items: center;
   align-content: center;
   justify-content: center;*/
@@ -269,14 +270,26 @@ ul.operateur, li.monome, .signe {
   padding: 0px;
   
 }
+* {
+   -ms-user-select: none; /* IE 10+ */
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   user-select: none;
+}
 
 .plus, .moins {
   margin : 0px 10px 0px 10px;
   padding: 0px;
   vertical-align: middle; 
 }
-
-.operateur > li:first-child > span > span.plus {
+sup.power {
+  font-size : 0.5em;
+}
+.operateur > li:first-child > span.plus {
+  display : none;
+}
+.operateur.multiplication > li > span.plus {
   display : none;
 }
 
@@ -285,7 +298,7 @@ ul.operateur, li.monome, .signe {
 
 .addition > ul:first-child::before   { content : '('; }
 
-.addition > ul::before   { content : '+('; }
+.addition > ul::before   { content : '+ ('; }
 .addition > ul::after   { content : ')'; }
 
 .addition > li::before   { content : ''; }
@@ -307,6 +320,8 @@ ul.operateur, li.monome, .signe {
 .multiplication > li:first-child::before   { content : ''; }
 .multiplication > li::after   { content : ''; }
 
+.equation > ul::before   { content : ''; }
+.equation > ul::after   { content : ''; }
 /* ==========================================================================
    Media Queries
    ========================================================================== */
